--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,30 @@
+.pfp{
+  height: 20vmin;
+  pointer-events: none;
+}
+
+
+/*
+@media (prefers-reduced-motion: no-preference) {
+  .pfp {
+    animation: Photo_Template-spin infinite 20s linear;
+  }
+}
+
+@keyframes Photo_Template-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+*/
+
+
+
+
+/*
 .App {
   text-align: center;
 }
@@ -36,3 +63,4 @@
     transform: rotate(360deg);
   }
 }
+*/
