low hanging fruit; next are creating buttons

--- a/src/components/self/About.css
+++ b/src/components/self/About.css
@@ -2,9 +2,13 @@
 Styling Ideas
 -Need to set a max width and height for abt me 
 paragraph so it's not a continuous line! (classname "bio")
+
+Body{
+    background-image: url(background-1.jpg);
+    background-repeat:no-repeat;
+    background-size: 100%;
+    }
 */
-
-
 .fact{
     border: 2px double black;
     width: 45%;
